--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,86 @@
-.App {
+.app {
+  max-width: 1200px;
+  margin: 0px auto;
+  display: flex;
+  gap: 50px;
+  padding-top: 50px;
+}
+
+.email-schedule-form {
+  background-color: white;
+  box-shadow: 0px 0px 6px #ccc;
+  padding: 20px;
+  box-sizing: border-box;
+  font-family: sans-serif;
+  border-radius: 10px;
+  height: fit-content;
+  flex: 1;
+}
+
+.app h2 {
+  margin-top: 0px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app div {
+  margin-bottom: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app div input,
+.app div textarea {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  font-size: 16px;
+  margin-top: 5px;
+  outline: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button {
+  width: 100%;
+  padding: 10px;
+  background-color: black;
   color: white;
+  border: none;
+  border-radius: 10px;
+  font-size: 16px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.message {
+  margin-top: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Emails CSS */
+
+.emails-container {
+  flex: 1;
+  max-height: 760px;
+  overflow-y: auto;
+  padding: 10px;
+}
+
+.email-wrapper {
+  background-color: #f7f6f6;
+  box-shadow: 0px 0px 6px #ccc;
+  padding: 20px;
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
+
+.email-wrapper h3 {
+  text-align: left;
+  margin-top: 0px;
+}
+
+.email-wrapper span {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.email-wrapper p {
+  margin-top: 0px !important;
 }
